feat(web): allow changing articles on retry
